# xai-cookbook

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  registry.yaml
.github/: pull_request_template.md  registry_schema.json
examples/function_calling_101/: guide.ipynb
examples/hyper_personalized_marketing/: guide.ipynb
examples/multi_turn_conversation/: guide.ipynb
examples/multimodal/structured_data_extraction/data/labels/: ground_truth_attributes.json
examples/sentiment_analysis_on_x/: guide.ipynb
voice-examples/agent/telephony/: README.md
voice-examples/agent/telephony/xai/: .env.example  README.md  package-lock.json  package.json
voice-examples/agent/telephony/xai/src/: bot.ts  index.ts  outbound.ts
voice-examples/agent/web/client/: package-lock.json
voice-examples/agent/web/openai/backend-nodejs/: .env.example
voice-examples/agent/web/xai/: README.md
voice-examples/agent/web/xai/backend-nodejs/: .env.example  package-lock.json
voice-examples/agent/web/xai/backend-python/: .env.example
voice-examples/agent/webrtc/: README.md
voice-examples/agent/webrtc/client/: README.md  package-lock.json
voice-examples/agent/webrtc/server/: .env.example  README.md  package-lock.json  package.json
